<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clapper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status">Here is the status Text</string>
    <string name="log">Here is the log Text</string>
    <string name="startBtn">Record</string>
    <string name="stopBtn">Stop</string>
    <string name="audio_status_recording">Recording</string>
    <string name="audio_status_stopped">Not Recording</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="info">摇一摇打开开关</string>

</resources>