<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PORT  "
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/port"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     IP "
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/ipAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutMac"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/LinearLayout0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MAC   " />

        <EditText
            android:id="@+id/macAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutMac"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="连接状态" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:layout_below="@+id/LinearLayout1"
        android:scrollbarStyle="insideInset"
        android:scrollbars="horizontal" >
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="vertical|horizontal">
        <TextView
            android:id="@+id/msgShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:text="@string/status"
            android:layout_gravity="center"/>
        </ScrollView>
        <TextView
            android:id="@+id/textLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:text="@string/log" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:text="@string/status"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutFunc"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/LinearLayout2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/open" />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/close" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutFunc" >

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:text="连接" />

        <Button
            android:id="@+id/disConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:text="断开连接" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:textColor="@android:color/white"
            android:text="HS" />
        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:textColor="@android:color/white"
            android:text="HR" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout3" >

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="发送" />

        <EditText
            android:id="@+id/sendMsg"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.31"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>

</RelativeLayout>
